# netdia

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  index.html  latest.json  package-lock.json  package.json
scripts/: generate-latest-json.sh
scripts/linux/: build.sh
scripts/macos/: build.sh  build_dmg.sh
scripts/windows/: build_msstore.ps1  sign.ps1
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: nd-port-probes.json  nd-service-probes.json  nd-top-100-ports.json  nd-top-1000-ports.json
src-tauri/src/: app.rs  config.rs  db.rs  fs.rs  lib.rs  log.rs  main.rs  operation.rs  resources.rs  state.rs
src-tauri/src/command/: config.rs  interfaces.rs  latency.rs  mod.rs  notifications.rs  ping.rs  scan.rs  speedtest.rs  trace.rs  ui_preferences.rs  updater.rs
src-tauri/src/model/: endpoint.rs  mod.rs  ping.rs  probe.rs  (+3 more)
src/components/: NotificationDrawer.vue
src/composables/: useAppConfig.ts  useInterfacesState.ts  useNotifications.ts  usePrivacyGate.ts  useTheme.ts  useUiPreferences.ts  useUpdater.ts
src/constants/: defaults.ts  storage.ts
src/layouts/: Default.vue
src/pages/: DNS.vue  Dashboard.vue  HostScan.vue  Interfaces.vue  Internet.vue  Neighbor.vue  OS.vue  Ping.vue  PortScan.vue  Routes.vue  Settings.vue  Socket.vue  Traceroute.vue  TrafficMonitor.vue
src/router/: index.ts
src/types/: config.ts  net.ts  notification.ts  preferences.ts  probe.ts  update.ts
src/utils/: formatter.ts  numeric.ts  preferences.ts
(+41 files in other folders)
